--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,13 @@ project.ext.externalDependency = [
 ]
 
 subprojects {
+  apply plugin: 'java'
+
   apply plugin: 'idea'
   apply plugin: 'eclipse'
+
   apply plugin: 'maven'
+  apply plugin: 'signing'
 
   configurations.all {
     // Avoid conflicts with google guava
@@ -73,13 +77,68 @@ subprojects {
     }
   }
 
+  task sourcesJar(type: Jar, dependsOn: classes) {
+    from sourceSets.main.allSource
+    classifier = 'sources'
+  }
+
+  task javadocJar(type: Jar, dependsOn: javadoc) {
+    from javadoc.destinationDir
+    classifier = 'javadoc'
+  }
+
+  artifacts {
+    archives jar
+    archives sourcesJar
+    archives javadocJar
+  }
+
+  signing {
+    required = { gradle.taskGraph.hasTask("uploadArchives") }
+    sign configurations.archives
+  }
+
   uploadArchives {
     repositories {
-      ivy {
-        url "${System.properties['user.home']}${File.separator}.ivy2${File.separator}local"
-        layout 'pattern', {
-          artifact "[organisation]/[module]/[revision]/[type]s/[artifact].[ext]"
-          ivy "[organisation]/[module]/[revision]/[type]s/[artifact].[ext]"
+      mavenDeployer {
+        beforeDeployment { MavenDeployment deployment -> signPom(deployment) }
+
+        repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+          authentication(userName: sonatypeUsername, password: sonatypePassword)
+        }
+
+        pom.project {
+          name project.name
+          packaging 'jar'
+          description 'SBT plugin for rest.li that provides all the build tasks required to build rest.li applications.'
+          url 'http://github.com/linkedin/rest.li-sbt-plugin'
+
+          scm {
+            url 'git@github.com:linkedin/rest.li-sbt-plugin.git'
+            connection 'scm:git:git@github.com:linkedin/rest.li-sbt-plugin.git'
+            developerConnection 'scm:git:git@github.com:linkedin/rest.li-sbt-plugin.git'
+          }
+
+          licenses {
+            license {
+              name 'The Apache Software License, Version 2.0'
+              url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+              distribution 'repo'
+            }
+          }
+          developers {
+            developer {
+              id 'jpbetz'
+              name 'Joe Betz'
+            }
+            developer {
+              id 'brikis98'
+              name 'Jim Brikman'
+            }
+            developer {
+              name 'Dean Thompson'
+            }
+          }
         }
       }
     }
