--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 version=0.0.1
+sonatypeUsername=please_set_in_home_dir_if_uploading_to_maven_central
+sonatypePassword=please_set_in_home_dir_if_uploading_to_maven_central
 
 scalaMajorVersion=2.10
 scalaExactVersion=2.10.3
