fix maven related bugs

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@
 build/
 */build/
 out/
+example/rest/
 example/target/
 example/*/target/
 example/project/project/target
 example/data-template/src/main/codegen
+
