--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=0.0.2
+version=0.0.3-SNAPSHOT
 sonatypeUsername=please_set_in_home_dir_if_uploading_to_maven_central
 sonatypePassword=please_set_in_home_dir_if_uploading_to_maven_central
 
