--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ examples/*/target/
 examples/*/*/target/
 examples/*/project/project
 examples/*/data-template/src/main/codegen
+test/*/target
+test/*/*/target
+test/*/project/project
+test/*/data-template/src/main/codegen
+test/*/artifacts
+
